--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
 
 
 
-
 		<h1>Filter your search</h1>
 		<!-- This form was built using Boostrap -->
 		<form>
@@ -84,7 +83,9 @@
     			<input type="text" class="form-control" id="inputLocation">
  			 </div>
   			
-
+			<div id="results">
+				<!-- results  will show here -->
+			</div>
 
   			<button type="submit" value="submit" class="btn btn-default">Submit(Search!)</button>
 			
@@ -97,9 +98,10 @@
 
 	<footer></footer>
 
-	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
-	<script src="https://apis.google.com/js/api.js"></script>
+		<!-- Google client library + a cxall back function to check if API is ready -->
+	<script src="https://apis.google.com/js/api.js? onload=init"></script>
 </body>
 </html>
 
